--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="window-target" content="_top">
 	<title>AESI TECNO</title>
-	<link rel="stylesheet" href="css/aesi.css?v=1.5" type="text/css">
+	<link rel="stylesheet" href="css/aesi.css?v=2.1" type="text/css">
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
 	
 	<link rel="stylesheet" href="css/icoicoico/style.css" type="text/css">
@@ -113,6 +113,30 @@
 			<h1>Nosotros</h1>
 		</section>
 		
+	</div>
+
+	<div id="inscrip_form">
+		<form enctype="multipart/form-data" action="index.php?action=Ingreso::inscripcion" 	method="post" id="form1"> 
+			<figure id="logo_mensaje">
+				<img src="img/enviar.png" alt="">
+			</figure>
+			<div id="close_form">
+				
+			</div>
+			<p>Ingresa tus datos.</p>
+			<label for="nombre">Apellido y Nombre</label>
+			<input type="text" name="nombre" placeholder="Tu Nombre" onmouseover="this.placeholder ='Sii Siiiiiii Completamee!!! :D'" onmouseout="this.placeholder ='Hoo noo... vuelve :,('">
+			<label for="dni">DNI</label>
+			<input type="number" name="dni" placeholder="Tu DNI" onmouseover="this.placeholder ='Sera tu pk en la db :O'" onmouseout="this.placeholder ='solo eso..encerio.:P'">
+			
+			<label for="correo">Email</label>
+			<input type="email" name="correo" placeholder="Tu Correo" onmouseover="this.placeholder ='Ya casi terminas el form!:,D'" onmouseout="this.placeholder ='por que te vas? :S'">
+			<input type="submit" name="submit" id="button" value="Inscribeme!">
+	
+		</form>
+	</div>
+	<div id="contac_button">
+		<h3>Inscribirme!</h3>
 	</div>
 
 	<footer>
