--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="window-target" content="_top">
 	<title>AESI TECNO</title>
-	<link rel="stylesheet" href="css/aesi.css?v=2.6" type="text/css">
+	<link rel="stylesheet" href="css/aesi.css?v=2.9" type="text/css">
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
 	
 	<link rel="stylesheet" href="css/icoicoico/style.css" type="text/css">
@@ -69,7 +69,7 @@
 					<img src="img/aesi.jpg" alt="">
 				</figure>
 			</a>
-			<a id="fm_nav" href="index.php?action=Ingreso_Controller::login">AESI</a>
+			<a id="fm_nav" href="index.php?action=Ingreso::login">AESI</a>
 		</h1>
 		
 		<nav id="ioMenu">
@@ -86,8 +86,8 @@
 				</figure>
 
 				<ul>
-					<li><a onClick="index.php?action=Ingreso::login"href="#">Inicio</a></li>
-					<li><a onClick="index.php?action=Ingreso::condiciones">Condiciones</a></li>
+					<li><a href="index.php?action=Ingreso::login">Inicio</a></li>
+					<li><a href="index.php?action=Ingreso::condiciones">Condiciones</a></li>
 					<li><a onClick="navSection('cursos')"href="#">Nosotros</a></li>
 				</ul>
 			</div>
