--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -1,5 +1,5 @@
 <div id="slider">
-	<h1>Condiciones</h1>
+	<h1>Nosotros</h1>
 	<section class="slide" id="condiciones">
 			<br><br>
 				<span>Entrada</span>
@@ -43,7 +43,7 @@
 				</p>
 				</div>
 			<br><br>
-			<span>Tiempo</span>
+			<span>Tiempo l´ımite</span>
 				<p>
 					1. El tiempo l´ımite informado corresponde a la entrada descripta en el enunciado, y
 				no a m´ultiples instancias de la misma.
