--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="window-target" content="_top">
 	<title>AESI TECNO</title>
-	<link rel="stylesheet" href="css/aesi.css?v=2.9" type="text/css">
+	<link rel="stylesheet" href="css/aesi.css?v=3.0" type="text/css">
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
 	
 	<link rel="stylesheet" href="css/icoicoico/style.css" type="text/css">
@@ -88,7 +88,7 @@
 				<ul>
 					<li><a href="index.php?action=Ingreso::login">Inicio</a></li>
 					<li><a href="index.php?action=Ingreso::condiciones">Condiciones</a></li>
-					<li><a onClick="navSection('cursos')"href="#">Nosotros</a></li>
+					<li><a href="index.php?action=Ingreso::nosotros">Nosotros</a></li>
 				</ul>
 			</div>
 		</nav>
