--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -1,53 +1,27 @@
 <div id="slider">
 	<h1>Nosotros</h1>
-	<section class="slide" id="condiciones">
+	<figure id="foto_nosotros">
+		<img src="img/nosotros.jpg" alt="">
+	</figure>
+	<section class="slide" id="nosotros">
 			<br><br>
-				<span>Entrada</span>
-				<div class="texto_cuerpo">
-					<p>
-				1. La entrada se debe leer de la entrada est´andar (standard input).
-				<br>
-				2. La entrada contiene un ´unico caso de prueba, el cual se describe utilizando una
-				cantidad de l´ıneas que depende del problema. No hay otros datos en la entrada.
-				<br>
-				3. Cuando una l´ınea de datos contiene varios valores, ´estos se separan utilizando exactamente<br>
-				un espacio entre ellos. Ning´un otro espacio aparece en la entrada. No hay
-				l´ıneas en blanco.
-				<br>
-				4. No hay letras con tildes, acentos, di´eresis, ni otros signos ortogr´aficos (˜n, A, ´e, ˜ `I, ˆo,
-				U, ¸c, etc´etera). ¨
-				<br>
-				5. Todas las l´ıneas, incluyendo la ´ultima, tienen la marca usual de fin de l´ınea.
-				</p>
-				</div>
-			<br><br>
-			<span>Salida</span>
-				<div class="texto_cuerpo">
-					<p>
-				1. La salida se debe escribir en la salida est´andar (standard output).<br>
-				2. El resultado del caso de prueba debe aparecer en la salida utilizando una cantidad
-				de l´ıneas que depende del problema. No debe haber otros datos en la salida.
-				<br>
-				3. Cuando una l´ınea de resultados contiene varios valores, ´estos se deben separar utilizando
-				exactamente un espacio entre ellos. Ning´un otro espacio debe aparecer en
-				la salida. No debe haber l´ıneas en blanco.
-				<br>
-				4. No debe haber letras con tildes, acentos, di´eresis, ni otros signos ortogr´aficos (˜n, A, ˜
-				´e, `I, ˆo, U, ¸c, etc´etera). ¨
-				<br>
-				5. Todas las l´ıneas, incluyendo la ´ultima, deben tener la marca usual de fin de l´ınea.
-				<br>
-				6. Para escribir n´umeros reales, redondearlos al racional m´as cercano con la cantidad
-				de d´ıgitos luego del punto decimal que se especifica en el enunciado. El caso de
-				prueba es tal que no va a haber empates en el redondeo.
-				</p>
-				</div>
-			<br><br>
-			<span>Tiempo l´ımite</span>
+				<span>Hola Mundo</span>
+				<div class="texto_cuerpo_2">
 				<p>
-					1. El tiempo l´ımite informado corresponde a la entrada descripta en el enunciado, y
-				no a m´ultiples instancias de la misma.
+					Somos un grupo de estudiantes de la Fac. de Tecnologia de la UNCa. Nosotros Conformamos la Agrupacion de Estudiantes de Sistemas e Informatica, conocida como AESI. Esta agrupacion surguio alla por el 2012 (año ficticio poner original) y pudimos ser reconocidas como agrupacion de carrera en el año 2013(ponele).
+					Todos los años logramos ahcer jornadas, cursos, charlas, entre otros, para el publico en general y especialmente para los estudiantes de la UNCa. 
+					Este año por primera vez hacemos un Torneo de Programacion, si es nuestra primera vez y esperamos que no sea la ultima! Este torneo se encontrara dentro de la Semana del Informatico, si quieres obtener mas informacion te invitamos a que te dirijas a nuestro face ;).
+					Estamos muy contentos por todo lo que estamos logrando y apreciamos muchisimo la participacion de todos los amantes de soft y del hard ♥ ♥.
+					Estamos en la constante busqueda de chicas y chicos, sean estudiantes o no, que tengan gustos a fines, asi que si eres uno de ellos no Dudes en acercarte!! 
+					Podremos lograr Grandes cosas,y lo sabes!
+					<br><br><br><br>
+					"Toda gran empresa comenzo siendo un equipo, todo gran equipo se unio por una idea..."
+					<br><br><br>
+					Hasta la proxima.
 				</p>
+				</div>
+			<br><br>
+			
 		</section>
 		
 </div>
