Primera parte OK

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,8 @@
             else{
                     document.getElementById('restante').innerHTML='Quedan ' + dias + ' D&iacute;as, ' + horas + ' Horas, ' + minutos + ' Minutos, ' + segundos + ' Segundos'
             }
+
+     
         }
         </script>
 </head>
@@ -76,7 +78,7 @@
 			<figure id="showMenu" class="ioMenuMovil" onClick="displayMenu()">
 				<h3>MENU</h3>
 			</figure>	
-			<div id="card_menu">
+			<div id="card_menu" style="display:none">
 				<figure id="hideMenu" class="ioMenuMovil" onClick="displayMenu()">
 					<h3>CERRAR</h3>
 				</figure>
