Recortando lo inecesario.

--- a/templates/registro_exito.html
+++ b/templates/registro_exito.html
@@ -1,4 +1,13 @@
+<!-- START BLOCK : ok_registro -->
 <div id="exito_msj">
 	<h2>Te has registrado con exito!!!</h2>
 	<h3>Ya te encuentras en la Dulce Espera....</h3>
 </div>
+<!-- END BLOCK : ok_registro -->
+
+<!-- START BLOCK : nok_registro -->
+<div id="exito_msj">
+	<h2>No, no. Ingresa otros datos.</h2>
+	<h3>Capaz ya te registraste y no lo recuerdas. Ve a un medico ya que la memoria selectiva decarta lo no importante. Esto SI ES IMPORTANTE ;)</h3>
+</div>
+<!-- END BLOCK : nok_registro -->
