--- a/templates/bienvenida.html
+++ b/templates/bienvenida.html
@@ -16,7 +16,7 @@
 	</div>
 	
 
-	<div id="inscrip_form">
+	<!--<div id="inscrip_form">
 		<form enctype="multipart/form-data" action="index.php?action=Ingreso::inscripcion" 	method="post" id="form1"> 
 			<figure id="logo_mensaje">
 				<img src="img/enviar.png" alt="">
@@ -38,8 +38,15 @@
 			<input type="submit" name="submit" id="button" value="Inscribeme!">
 	
 		</form>
-	</div>
+	</div>-->
+
 	<div id="contac_button" onClick="displayForm('block')">
-		<h3>Inscribirme!</h3>
+		
+			<h3>INSCRIBIRME!</h3>
+		
+		
+		<div class="cargarsolo">
+			
+		</div>
 	</div>
 	
