--- a/css/aesi.css
+++ b/css/aesi.css
@@ -1,6 +1,6 @@
 body{
 	font-size:  16px;
-	background: #233D58;
+	background: #6000FF;/*#233D58*/
 	position: relative;
 	top: -9px;
 }
@@ -8,7 +8,7 @@ body{
 header{
 	width: 100%;
 	height: 35px;
-	background: #233D58;
+	background: #6000FF;
 	position: relative;
 	z-index: 999;
 
@@ -121,7 +121,7 @@ header #next_section img{
 	
 	width: 100%;
 	position: relative;
-	height: 800px;
+	height: auto;/*800px*/
 	
 	
 }
@@ -186,7 +186,7 @@ header #next_section img{
 }
 #slider #inicio{
 	
-	background: #233D58;
+	background: #6000FF;
 	position: relative;
 	text-align: center;
 	padding-bottom: 50px;
@@ -285,7 +285,7 @@ header #next_section img{
 	right: 0px;
 	border-top: 1px solid black;
 	box-shadow: 0px 0px 3px #6E00D4;
-	z-index: 999;
+	z-index: 1000;
 	display: none;
 
 
@@ -378,6 +378,7 @@ header #next_section img{
 	
 	width: auto;
 	transition-duration: 0.7s;
+	display: none;
 }
 
 
@@ -407,6 +408,103 @@ header #next_section img{
 #exito_msj > h2{
 	font-size: 4em;
 	}
+
+#slider .slide #contador{
+	
+	transition-duration: 0.3s;
+	
+}
+#slider .slide #contador a{
+	text-decoration: none;
+	color: black;
+}
+#slider .slide #contador:hover{
+	font-size: 6em;
+	cursor: pointer;
+	text-shadow:  0px 0px 20px LightSeaGreen;
+}
+/************************************/
+.form_login{
+	
+	 background: -webkit-linear-gradient(
+				top,
+				#A939C5  0%,
+				#A232A3 50%,
+				#7B27B1 100%
+   				);
+	width: auto;
+	position: relative;
+	left: 0%;
+	top: 150px;
+	font-size: 2em;
+	text-align: center;
+}
+.form_login > *{
+	margin: 20px;
+	}
+.form_login input{
+	width: 250px;
+	}
+.contenedor_fomr_login{
+	background: none;
+	margin: 15px;
+}
+
+.cont_login .label_login{
+	
+	position: relative;
+	left: -3%;
+	font-weight: 700;
+	
+}
+
+.cont_login #email_login_label{
+	position: relative;
+	left: -80px;
+	}
+.cont_login #email_login_input{
+	position: relative;
+	left: 45px;
+	}
+.cont_login #button_login{
+	 background: -webkit-linear-gradient(
+				top,
+				#CAADD1  0%,
+				#858185 50%,
+				#161616 100%
+   				); 
+}
+
+.cont_login #button_login:hover{
+	 font-size: 2em;
+	 cursor: pointer;
+	 transition-duration: 0.3s;
+}
+
+/*********************/
+#cont_ejercicios {
+	
+	width: 80%;
+	position: relative;
+	left: 100px;
+}
+
+.texto_ejercicios{
+	border: 1px solid black;
+	border-left-style: none;
+	
+	border-right-style: none;
+} 
+.res_ejercicios{
+	position: relative;
+	top: 20px;
+}
+
+.res_ejercicios label{
+	font-weight: 600;
+}
+
+
 footer{
 	width: 100%;
 	background: black;
@@ -737,6 +835,10 @@ header nav #card_menu ul li a{
 
 
 }
+
+.form_login input{
+	width: auto;
+	}
 
 
 }
