--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="keywords" content="Franja Morada Catamarca, fmtecno, franja morada">
-	<meta name="description" content="Franja Morada Tecnologia Catamarca, Franja Morada, Radicales Catamarca">
-	<meta name="owner" content="Franja Morada">
+	<meta name="keywords" content="aesi, informatica catamarca, torneo de programacion">
+	<meta name="description" content="agrupacion de estudiantes, informatica, catamarca informatica">
+	<meta name="owner" content="AESI-TECNO>
 
 	<meta name="author" content="abueloinformatico.xyz">
 	<meta name="robots" content="index, follow">
@@ -14,7 +14,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="window-target" content="_top">
 	<title>AESI TECNO</title>
-	<link rel="stylesheet" href="css/aesi.css?v=3.0" type="text/css">
+	<link rel="stylesheet" href="css/aesi.css?v=3.3" type="text/css">
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
 	
 	<link rel="stylesheet" href="css/icoicoico/style.css" type="text/css">
@@ -28,15 +28,15 @@
    <script type="text/javascript">
         
         function countdown(id){
-        	////////////////FECHA
-            var fecha=new Date('2017','3','28','10','0','0')
+        	////////////////FECHA AÑO MES DIA HORA MINUTO SEGUDOS
+            var fecha=new Date('2017','3','26','12','39','0')
          
             var hoy=new Date()
             var dias=0
             var horas=0
             var minutos=0
             var segundos=0
-
+         
             if (fecha>hoy){
                     var diferencia=(fecha.getTime()-hoy.getTime())/1000
                     dias=Math.floor(diferencia/86400)
@@ -54,8 +54,20 @@
                     }
             }
             else{
-                    document.getElementById('restante').innerHTML='Quedan ' + dias + ' D&iacute;as, ' + horas + ' Horas, ' + minutos + ' Minutos, ' + segundos + ' Segundos'
+            	okok = 2;
+            	var id_div_comenzar = document.getElementById(id);
+            	var h2_ = document.createElement("h2");
+            	var vinculo = document.createElement("a");
+            	vinculo.setAttribute('href','index.php?action=Ingreso::login_torneo');
+            	var nombre_comenzar = "COMENZAR";
+            	var h2_ = document.createTextNode(nombre_comenzar);
+            	vinculo.appendChild(h2_);
+            	id_div_comenzar.appendChild(vinculo);
+            	//id_div_comenzar.innerHTML= "COMENZAR"
             }
+           
+
+          
 
      
         }
@@ -88,9 +100,18 @@
 				</figure>
 
 				<ul>
+				<!-- START BLOCK : sin_login -->
+					<li><a href="#" onClick="displayForm('block')">Inscribirme!</a></li>
+				<!-- END BLOCK : sin_login -->
+				<!-- START BLOCK : con_login_ejercicios -->
+					<li><a href="index.php?action=Ingreso::ejercicios">Ejercicios</a></li>
+				<!-- END BLOCK : con_login_ejercicios -->
 					<li><a href="index.php?action=Ingreso::login">Inicio</a></li>
 					<li><a href="index.php?action=Ingreso::condiciones">Condiciones</a></li>
 					<li><a href="index.php?action=Ingreso::nosotros">Nosotros</a></li>
+				<!-- START BLOCK : con_login -->
+					<li><a href="index.php?action=Ingreso::cerrar_sesion">Salir</a></li>
+				<!-- END BLOCK : con_login -->
 				</ul>
 			</div>
 		</nav>
@@ -100,9 +121,32 @@
 
 	
 
-
+<!-- START BLOCK : contenido -->
 	{contenido}
+<!-- END BLOCK : contenido -->
+	<div id="inscrip_form">
+		<form enctype="multipart/form-data" action="index.php?action=Ingreso::inscripcion" 	method="post" id="form1"> 
+			<figure id="logo_mensaje">
+				<img src="img/enviar.png" alt="">
+			</figure>
+			<div id="close_form" onClick="displayForm('none')">
+				
+			</div>
+			<p>Ingresa tus datos.</p>
+			<label for="nombre">Apellido y Nombre</label>
+			<input required type="text" name="nombre" placeholder="Tu Nombre" onmouseover="this.placeholder ='Sii Siiiiiii Completamee!!! :D'" onmouseout="this.placeholder ='Hoo noo... vuelve :,('">
+			<label for="dni">DNI</label>
+			<input required type="number" name="dni" placeholder="Tu DNI" onmouseover="this.placeholder ='Sera tu pk en la db :O'" onmouseout="this.placeholder ='solo eso..encerio.:P'">
+			
+			<label for="correo">Email</label>
+			<input required type="email" name="correo" placeholder="Tu Correo" onmouseover="this.placeholder ='Ya casi terminas el form!:,D'" onmouseout="this.placeholder ='por que te vas? :S'">
+
+			<label for="correo">Contraseña</label>
+			<input required type="password" name="pass" placeholder="Contraseña para tu cuenta" onmouseover="this.placeholder ='Esto es lo ultimo ;)'" onmouseout="this.placeholder ='No entratemos a tu face u.u'">
+			<input type="submit" name="submit" id="button" value="Inscribeme!">
 	
+		</form>
+	</div>	
 
 	<footer>
 
