--- a/templates/bienvenida.html
+++ b/templates/bienvenida.html
@@ -7,7 +7,7 @@
 				</div>
 				<div class="mainlogo">
 					<h2><strong>Torneo de Programacion</strong></h2>	
-					<figure><img src="img/aesi.jpg" alt=""></figure>
+					<figure><img src="img/aesi2.png" alt=""></figure>
 					
 				</div>
 				<div id='contador'></div>
