--- a/css/aesi.css
+++ b/css/aesi.css
@@ -44,7 +44,7 @@ header nav #card_menu{
 	height: 100%;
 	
 	width: 230px;
-	background: black;
+	background: #928080;
 	top: -45px;
 	left: 0px;
 	border-right: 3px solid #AFAEAE;
@@ -548,10 +548,11 @@ footer:hover{
 }*/
 
 footer .rrss{
-	margin-top: 70px;
+	margin-top: 40px;
 	width: 100%;
 	height: 180px;
-
+	display:block;
+	
 	
 }
 
@@ -579,13 +580,36 @@ footer .rrss a:before{
 
 
 }
-#slider .mainfondotrasfoto{
-	width: 100%;
-	height: 300px;
-	position: absolute;
+/******************/
+footer #logo_footer_facu{
 	
-	}
+	width: 100px;
+	display: block;
+	margin-left: -50px;
+	position: relative;
+	
+}
 
+
+footer #logo_footer_facu img{
+	font-size: 90px;
+	width: 100px;
+	height: 100px;
+	position: absolute;
+	top: 0px;
+}
+
+
+footer .footex{
+	
+	position: absolute;
+	top: 20px;
+	left: 35%;
+}
+
+footer .masabajo{
+	position: relative;
+}
 
 #contador{
 	display: block;
