--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="window-target" content="_top">
 	<title>AESI TECNO</title>
-	<link rel="stylesheet" href="css/aesi.css?v=3.3" type="text/css">
+	<link rel="stylesheet" href="css/aesi.css?v=3.4" type="text/css">
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
 	
 	<link rel="stylesheet" href="css/icoicoico/style.css" type="text/css">
@@ -80,7 +80,7 @@
 		<h1>
 			<a href="index.php?action=Ingreso_Controller::login">
 				<figure>
-					<img src="img/aesi.jpg" alt="">
+					<img src="img/aesi2.png" alt="">
 				</figure>
 			</a>
 			<a id="fm_nav" href="index.php?action=Ingreso::login">AESI</a>
@@ -96,7 +96,7 @@
 				</figure>
 
 				<figure id="logo_menu">
-					<img src="img/aesi.jpg" alt="">
+					<img src="img/aesi2.png" alt="">
 				</figure>
 
 				<ul>
@@ -149,12 +149,23 @@
 	</div>	
 
 	<footer>
-
+		
+		<figure id="logo_footer_facu">
+			<img src="img/facu.png" alt="">
+		</figure>
+		
 		<div class="rrss">
-			<a target="_blank" href="https://es-la.facebook.com/aesi.tecno"><strong>AESI-TECNO</strong></a>
-			<p>Agrupacion de Estudiantes de Sistemas e Informatica.</p>
-			<p>Facultad de Tecnologia- UNCa</p>
+			<div class="footex">
+				<a target="_blank" href="https://es-la.facebook.com/aesi.tecno"><strong>AESI-TECNO</strong></a>
+				<p>Agrupacion de Estudiantes de Sistemas e Informatica.</p>
+				<p>Facultad de Tecnologia- UNCa</p>
+			</div>
+				
 		</div>
+		
+		<!--<figure id="logo_footer">
+			<img src="img/facu.png" alt="">
+		</figure>-->
 		
 	</footer>
 	
