--- a/templates/condiciones.html
+++ b/templates/condiciones.html
@@ -2,52 +2,45 @@
 	<h1>Condiciones</h1>
 	<section class="slide" id="condiciones">
 			<br><br>
-				<span>Entrada</span>
+				<span>Atencion!</span>
 				<div class="texto_cuerpo">
 					<p>
-				1. La entrada se debe leer de la entrada est´andar (standard input).
+				1. Es una competencia entre los estudiantes de la UNCA y público en general que participaron de la “Semana informática”, donde se plantean una serie de situaciones problemáticas cuya solución puede ser resuelta  en algún lenguaje de programación (a elección!).
+
 				<br>
-				2. La entrada contiene un ´unico caso de prueba, el cual se describe utilizando una
-				cantidad de l´ıneas que depende del problema. No hay otros datos en la entrada.
+				2. El participante ganador será aquel que pase todos los niveles propuestos, en el menor tiempo posible.
 				<br>
-				3. Cuando una l´ınea de datos contiene varios valores, ´estos se separan utilizando exactamente<br>
-				un espacio entre ellos. Ning´un otro espacio aparece en la entrada. No hay
-				l´ıneas en blanco.
+				3. Para participar podrás hacerlo en forma individual y/o Grupal. Se debe tener en cuenta que los premios están asignados a los puestos finales(1º premio = 1º lugar, 2º premio = 2º lugar …nºpremio = nº lugar) Es un único premio por lugar.
 				<br>
-				4. No hay letras con tildes, acentos, di´eresis, ni otros signos ortogr´aficos (˜n, A, ´e, ˜ `I, ˆo,
-				U, ¸c, etc´etera). ¨
+				4. Se permite:
+				&nbsp&nbsp&nbsp&nbsp-Una computadora, propia o suministrada por la ORGANIZACION (con aviso anticipado)
+				&nbsp&nbsp&nbsp&nbsp-Libros, fotocopias y apuntes que cada equipo o individuo desee llevar al torneo.
+
 				<br>
-				5. Todas las l´ıneas, incluyendo la ´ultima, tienen la marca usual de fin de l´ınea.
+				5. En el Desarrollo del concurso: Se desarrollara en tres (3) niveles, cada uno compuesto por un ejercicios,  a resolver entre las horas 17:00 a 20:00 del día Viernes 28 de Abril.
+				<br>
+				6. Cuando se resuelve un problema, se sube el ejercicio a la plataforma para ser evaluado por  los jueces en la solución a ese ejercicio.
+				<br>
+				7. Los participantes tendrán derecho a un “SALVAVIDAS”, en caso de que sea necesario, según su criterio. El mismo se podrá utilizar en cualquiera de los 3 niveles. La utilización o no del Salvavidas, no afectara al resultado final.
+				<br>
+				8. El Jurado estará compuesto por Estudiantes Avanzados y Profesores de la carrera Ing. en Informática.
+				<br>
+				9. La Evaluación:
+				&nbsp&nbsp&nbsp&nbspUna vez que el participante haya resuelto el primer ejercicio, y este SEGURO de que el mismo se encuentra correcto ante las exigencias del problema, lo subirá a la plataforma y podrá continuar con el siguiente nivel, hasta terminar los 3 niveles.<br>
+				&nbsp&nbsp&nbsp&nbspUna vez subido los 3 ejercicios, el jurado comunicará los resultados en un tiempo acorde.
+				&nbsp&nbsp&nbsp&nbspAl momento de evaluar el jurado tendrá en cuenta la hora de inicio (primer nivel) hasta el final (tercer nivel) y el participante o grupo que haya resuelto todos los ejercicios de manera correcta y en menor tiempo será el ganador.
+				&nbsp&nbsp&nbsp&nbspEl codigo enviado sera testeado pasando por pruebas de caja negra pare ver si son robustos y cumplen con las exigencias del ejercicio.<br>
+				&nbsp&nbsp&nbsp&nbspEste sistema se tendrá en cuenta para asignar todos los puestos existentes.
+				<br>
+				10.	En caso de que varios equipos resuelvan la misma cantidad de ejercicios, ganará aquel cuya suma de tiempos de entrega sea menor.
+				<br>
+				11.	Todos los equipos y/o participantes se llevarán un certificado de participación en el torneo.
 				</p>
 				</div>
 			<br><br>
-			<span>Salida</span>
-				<div class="texto_cuerpo">
-					<p>
-				1. La salida se debe escribir en la salida est´andar (standard output).<br>
-				2. El resultado del caso de prueba debe aparecer en la salida utilizando una cantidad
-				de l´ıneas que depende del problema. No debe haber otros datos en la salida.
-				<br>
-				3. Cuando una l´ınea de resultados contiene varios valores, ´estos se deben separar utilizando
-				exactamente un espacio entre ellos. Ning´un otro espacio debe aparecer en
-				la salida. No debe haber l´ıneas en blanco.
-				<br>
-				4. No debe haber letras con tildes, acentos, di´eresis, ni otros signos ortogr´aficos (˜n, A, ˜
-				´e, `I, ˆo, U, ¸c, etc´etera). ¨
-				<br>
-				5. Todas las l´ıneas, incluyendo la ´ultima, deben tener la marca usual de fin de l´ınea.
-				<br>
-				6. Para escribir n´umeros reales, redondearlos al racional m´as cercano con la cantidad
-				de d´ıgitos luego del punto decimal que se especifica en el enunciado. El caso de
-				prueba es tal que no va a haber empates en el redondeo.
-				</p>
-				</div>
-			<br><br>
-			<span>Tiempo</span>
-				<p>
-					1. El tiempo l´ımite informado corresponde a la entrada descripta en el enunciado, y
-				no a m´ultiples instancias de la misma.
-				</p>
-		</section>
 		
+		<div id="cont_descarga">
+		<a href="doc/condiciones.docx" download><h2>Descarga Este documento.</h2></a>
+		</div>
+	</section>
 </div>
