--- a/templates/registro_exito.html
+++ b/templates/registro_exito.html
@@ -8,6 +8,6 @@
 <!-- START BLOCK : nok_registro -->
 <div id="exito_msj">
 	<h2>No, no. Ingresa otros datos.</h2>
-	<h3>Capaz ya te registraste y no lo recuerdas. Ve a un medico ya que la memoria selectiva descarta lo no importante. <br>Esto SI ES IMPORTANTE ;)</h3>
+	<h3>Capaz ya te registraste y no lo recuerdas.</h3>
 </div>
 <!-- END BLOCK : nok_registro -->
