--- a/css/aesi.css
+++ b/css/aesi.css
@@ -136,7 +136,7 @@ header #next_section img{
 
 #slider section.slide #condiciones{
 	
-	position: absolute;
+	position: relative;
 
 }
 
@@ -175,7 +175,7 @@ header #next_section img{
 	
 	font-size: 2em;
 	font-weight: 900;
-	left: -45%;
+	left: -35%;
 	margin-top: 10%;
 }
 
@@ -232,6 +232,12 @@ header #next_section img{
 	padding-bottom: 20px;
 }
 
+#slider #condiciones #cont_descarga{
+	position: relative;
+	display: block;
+	
+
+ }
 
 
 #slider #nosotros{ 
@@ -278,8 +284,9 @@ header #next_section img{
 
 #inscrip_form{
 	position: absolute;
-	height: 115%; /*Altura del dispositivo vh*/
+	height: 800px; /*Altura del dispositivo vh*/
 	background: white;
+	
 	width: 250px;
 	top: 35px;
 	right: 0px;
@@ -305,7 +312,7 @@ header #next_section img{
 	width: 30px;
 	height: 30px;
 	left:85%;
-	top: 190px;
+	top: 10px;
 	z-index: 999;
 
 }
@@ -313,7 +320,7 @@ header #next_section img{
 	content: 'X';
 	position: relative;
 	font-size: 1.5em;
-
+	
 	font-weight: 900;
 }
 
@@ -419,7 +426,7 @@ header #next_section img{
 	color: black;
 }
 #slider .slide #contador:hover{
-	font-size: 6em;
+	font-size: 3em;
 	cursor: pointer;
 	text-shadow:  0px 0px 20px LightSeaGreen;
 }
@@ -559,7 +566,8 @@ footer .rrss{
 footer .rrss a{
 	width: 160px;
 	height: 20px;
-	
+	text-decoration: none;
+	color:white;
 	display: inline-block;
 	position: relative;
 	
@@ -846,7 +854,7 @@ header nav #card_menu ul li a{
 
 #inscrip_form{
 	position: absolute;
-	height: 115%; /*Altura del dispositivo vh*/
+	
 	background: white;
 	width: 250px;
 	top: 35px;
@@ -855,8 +863,7 @@ header nav #card_menu ul li a{
 	box-shadow: 0px 0px 3px #6E00D4;
 	z-index: 999;
 	display: none;
-
-
+	height: 100% !important; /*Altura del dispositivo vh*/
 
 }
 
