--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="keywords" content="aesi, informatica catamarca, torneo de programacion">
 	<meta name="description" content="agrupacion de estudiantes, informatica, catamarca informatica">
-	<meta name="owner" content="AESI-TECNO>
+	<meta name="owner" content="AESI-TECNO">
 
 	<meta name="author" content="abueloinformatico.xyz">
 	<meta name="robots" content="index, follow">
@@ -14,7 +14,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="window-target" content="_top">
 	<title>AESI TECNO</title>
-	<link rel="stylesheet" href="css/aesi.css?v=3.4" type="text/css">
+	<link rel="stylesheet" href="css/aesi.css?v=3.9" type="text/css">
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
 	
 	<link rel="stylesheet" href="css/icoicoico/style.css" type="text/css">
@@ -29,7 +29,7 @@
         
         function countdown(id){
         	////////////////FECHA AÑO MES DIA HORA MINUTO SEGUDOS
-            var fecha=new Date('2017','3','26','12','39','0')
+            var fecha=new Date('2017','3','28','17','0','0')
          
             var hoy=new Date()
             var dias=0
@@ -126,13 +126,11 @@
 <!-- END BLOCK : contenido -->
 	<div id="inscrip_form">
 		<form enctype="multipart/form-data" action="index.php?action=Ingreso::inscripcion" 	method="post" id="form1"> 
-			<figure id="logo_mensaje">
-				<img src="img/enviar.png" alt="">
-			</figure>
+			
 			<div id="close_form" onClick="displayForm('none')">
 				
 			</div>
-			<p>Ingresa tus datos.</p>
+			<strong><p>Ingresa tus datos.</p></strong>
 			<label for="nombre">Apellido y Nombre</label>
 			<input required type="text" name="nombre" placeholder="Tu Nombre" onmouseover="this.placeholder ='Sii Siiiiiii Completamee!!! :D'" onmouseout="this.placeholder ='Hoo noo... vuelve :,('">
 			<label for="dni">DNI</label>
@@ -143,8 +141,12 @@
 
 			<label for="correo">Contraseña</label>
 			<input required type="password" name="pass" placeholder="Contraseña para tu cuenta" onmouseover="this.placeholder ='Esto es lo ultimo ;)'" onmouseout="this.placeholder ='No entratemos a tu face u.u'">
+			<label for="correo">Lenguaje que usaras</label>
+			<input required type="lenguaje" name="leng" placeholder="El que mejor sepas" onmouseover="this.placeholder =':D'" onmouseout="this.placeholder ='Pensala bien'">
+
 			<input type="submit" name="submit" id="button" value="Inscribeme!">
-	
+
+			
 		</form>
 	</div>	
 
