--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -8,8 +8,8 @@
 				<span>Hola Mundo</span>
 				<div class="texto_cuerpo_2">
 				<p>
-					Somos un grupo de estudiantes de la Fac. de Tecnologia de la UNCa. Nosotros Conformamos la Agrupacion de Estudiantes de Sistemas e Informatica, conocida como AESI. Esta agrupacion surguio alla por el 2012 (año ficticio poner original) y pudimos ser reconocidas como agrupacion de carrera en el año 2013(ponele).
-					Todos los años logramos ahcer jornadas, cursos, charlas, entre otros, para el publico en general y especialmente para los estudiantes de la UNCa. 
+					Somos un grupo de estudiantes de la Fac. de Tecnologia de la UNCa. Nosotros Conformamos la Agrupacion de Estudiantes de Sistemas e Informatica, conocida como AESI. Esta agrupacion surguio alla por el año 2000 en donde ese año fuimos reconocidos como agrupacion de carrera de manera oficial.
+					Todos los años logramos hacer jornadas, cursos, charlas, entre otros, para el publico en general y especialmente para los estudiantes de la UNCa. 
 					Este año por primera vez hacemos un Torneo de Programacion, si es nuestra primera vez y esperamos que no sea la ultima! Este torneo se encontrara dentro de la Semana del Informatico, si quieres obtener mas informacion te invitamos a que te dirijas a nuestro <a target="_blank" href="https://es-la.facebook.com/aesi.tecno">face</a> ;).
 					Estamos muy contentos por todo lo que estamos logrando y apreciamos muchisimo la participacion de todos los amantes de soft y del hard ♥ ♥.
 					Estamos en la constante busqueda de chicas y chicos, sean estudiantes o no, que tengan gustos a fines, asi que si eres uno de ellos no Dudes en acercarte!! 
