--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,7 @@
 	<footer>
 		
 		<figure id="logo_footer_facu">
-			<img src="img/facu.png" alt="">
+			<a href="http://tecno.unca.edu.ar" target="_blank"><img src="img/facu.png" alt=""></a>
 		</figure>
 		
 		<div class="rrss">
